--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
             </div>
         </div>
     </nav>
-    <div class="body-content">
+    <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
