--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,8 +20,8 @@
                 <div class="form-inline">
                     <div class="row">
                         <div class="form-group">
-                            <input class="form-control" placeholder="시작일" v-model="searchData.startDate">
-                                ~ <input placeholder="종료일" class="form-control" v-model="searchData.endDate">
+                            <input class="form-control" id="startDate" placeholder="시작일" v-model="searchData.startDate">
+                                ~ <input placeholder="종료일" id="endDate" class="form-control" v-model="searchData.endDate">
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control" v-model="searchData.title" style="width: 350px !important;" placeholder="Search...">
@@ -63,7 +63,7 @@
     {{surveys}}
 </div>
 
-<script>
+<script type="text/javascript">
 var vue = new Vue({
     el: '#container',
     data: {
@@ -73,6 +73,20 @@ var vue = new Vue({
     },
     mounted : function(){
         $("#container").show();
+        
+        $("#startDate").datepicker({
+            dateFormat: "yy-mm-dd",
+             onSelect: function(dateText) { 
+                vue.searchData.startDate = dateText;
+            }
+        });
+
+        $("#endDate").datepicker({
+            dateFormat: "yy-mm-dd",
+            onSelect: function(dateText) { 
+                vue.searchData.endDate = dateText;
+            }
+        });
     }, 
     methods : {
         search : function(){
@@ -90,7 +104,9 @@ var vue = new Vue({
         deletesurvey : function(_id){
             axios.post('/api/UBSurvey/delete', {id : _id})
             .then(function (response) {
-                vue.selectSurvey();
+                if(response.data.success){
+                    vue.search();
+                }
             })
             .catch(function (error) {
                 console.log(error);
@@ -98,4 +114,6 @@ var vue = new Vue({
         }
     }
 })
+
+
 </script>
