--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,38 +18,38 @@
         <tr>
             <td>
                 <div class="form-inline">
-                    <div class="row">
-                        <div class="form-group">
-                            <input class="form-control" id="startDate" placeholder="시작일" v-model="searchData.startDate">
-                                ~ <input placeholder="종료일" id="endDate" class="form-control" v-model="searchData.endDate">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" v-model="searchData.title" style="width: 350px !important;" placeholder="Search...">
-                        </div>
-                        <div class="form-group">
-                            <button v-on:click=search class="btn btn-info"><span class="glyphicon glyphicon-search"></span> 검색</button>
-                        </div>
+                    <div class="form-group">
+                        <input class="form-control" id="startDate" placeholder="시작일" v-model="searchData.startDate">
+                            ~ <input placeholder="종료일" id="endDate" class="form-control" v-model="searchData.endDate">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" v-model="searchData.title" style="width: 350px !important;" placeholder="Search...">
+                    </div>
+                    <div class="form-group">
+                        <button v-on:click=search class="btn btn-info"><span class="glyphicon glyphicon-search"></span> 검색</button>
                     </div>
                 </div>
             </td>
         </tr>
     </table>
-    <div style="margin-bottom:15px"><button class="btn btn-success">설문등록</button></div>
+    <div style="margin-bottom:15px"><a class="btn btn-success" href="/home/edit/">설문등록</a></div>
     <table class="table table-bordered table-hover">
-    <tr class="info">
-        <th>NO</th>
-        <th>설문제목</th>
-        <th>기간</th>
-        <th>참여인원</th>
-        <th>삭제</th>
-    </tr>
-    <tr v-for="(s, index) in surveys">
-        <td>{{((pager.PageIndex - 1) * 10) + index + 1}}</td>
-        <td><a :href="editActionUrl(s._id)">{{s.title}}</a></td>
-        <td>{{s.startDateAndEndDate}}</td>
-        <td>{{s.limitPersonsStr}}</td>
-        <td><button class="btn btn-danger" v-on:click="deletesurvey(s._id)" >삭제</button> </td>
-    </tr>     
+        <thead>
+            <tr class="info">
+                <th>NO</th>
+                <th>설문제목</th>
+                <th>기간</th>
+                <th>참여인원</th>
+                <th>삭제</th>
+            </tr>
+        </thead>
+        <tr v-for="(s, index) in surveys">
+            <td class="text-right">{{((pager.PageIndex - 1) * 10) + index + 1}}</td>
+            <td><a :href="editActionUrl(s._id)">{{s.title}}</a></td>
+            <td>{{s.startDateAndEndDate}}</td>
+            <td>{{s.limitPersonsStr}}</td>
+            <td><button class="btn btn-danger" v-on:click="deletesurvey(s._id)" >삭제</button> </td>
+        </tr>     
     </table>
     <center>
     <ul class="pagination text-center">
