--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">설문작성</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">설문리스트</a></li>
                 </ul>
             </div>
         </div>
