--- a/Views/Edit/Prev.cshtml
+++ b/Views/Edit/Prev.cshtml
@@ -11,7 +11,12 @@
     <script src="~/js/Example/view2.js"></script>
 </environment>
 <script>
-    var strSurvey = @Html.Raw(ViewData["survey"]);
+    
+
+    var surveyInfo = {
+        strSurvey : '@Html.Raw(ViewData["survey"])'
+    };
+
 </script>
 
 
