--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -1,5 +1,6 @@
+@model UBSurvey.Models.UBSurveyInfo;
 @{
-    ViewData["Title"] = "Detail Page";
+    ViewData["Title"] = "Edit Page";
 }
 
 @section Scripts {
@@ -11,20 +12,9 @@
 </environment>
 <script src="~/js/axios.min.js"></script>
 }
-<script type="text/javascript">
-    $( function(){
-        $("#toDate").datepicker({
-            dateFormat: "yy-mm-dd"
-        });
-        $("#fromDate").datepicker({
-            dateFormat: "yy-mm-dd"
-        });
-        
-    });
 
-</script>
 
-<div id="container"> 
+<div id="container" > 
     
         <table class="table table-bordered text-center">
             <tr>
@@ -33,23 +23,22 @@
             </tr>
             <tr>
                 <td class="info">제목</td>
-                <td colspan="3"><input type="text" class="form-control" ></td>
+                <td colspan="3"><input type="text" class="form-control" v-model="title" ></td>
             </tr>
             <tr>
                 <td class="info" >배포기간</td>
                 <td class="form-inline">
-                    <input type="text" style="width:auto" class="form-control datepicker"  id="toDate"> ~
-                    <input type="text" style="width:auto" class="form-control datepicker" id="fromDate">
+                    <input type="text" style="width:auto" class="form-control datepicker"  id="startDate"> ~
+                    <input type="text" style="width:auto" class="form-control datepicker" id="endDate">
                 </td>
                 <td class="info" >마감인원</td>
-                <td><input type="text" class="form-control " ></td>
+                <td><input type="text" class="form-control " v-model="limitperson" ></td>
             </tr>
         </table>
         <div>
-            <button class="btn btn-success">설문등록</button>
-            <button class="btn btn-primary pull-right" >저장</button>
-            <button class="btn btn-danger pull-right" >삭제</button>
-            <button class="btn btn-danger pull-right" >마감</button>
+            <button class="btn btn-success" v-on:click="register"  >설문등록</button>
+            <button class="btn btn-primary pull-right" v-on:click="save" >저장</button>
+            <button class="btn btn-danger pull-right" v-on:click="deletesurvey">삭제</button>
         </div>
         <hr>
         <table class="table table-bordered text-center">
@@ -65,27 +54,39 @@
         </table>
 </div>
 
-<script>
+
+<script type="text/javascript">
     var vue = new Vue({
         el: '#container',
-        data:{
+        data : {
+            title : '@Model.Title',
+            limitperson : '@Model.LimitPersons'
+            
+        },
+        mounted : function(){
 
+            $("#startDate").datepicker({
+                dateFormat: "yy-mm-dd"
+            });
+
+            $("#endDate").datepicker({
+                dateFormat: "yy-mm-dd"
+            });
         },
         methods : {
-            delete : function(){
+            deletesurvey : function(){
                 alert('삭제');
             },
             save : function(){
                 alert('저장');
-            },
-            finish : function(){
-                alert('마감');
             },
             register: function(){
                 alert('설문등록');
             }
 
         }
+        
+         
 
 
 
@@ -93,3 +94,4 @@
 
 
 </script>
+
