--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -59,3 +59,8 @@ textarea {resize: none;}
 
 .cur { cursor: pointer }
 .non-width { width:auto; display:inline; }
+
+
+.quesion-nowarp { color: #7f7f7f; margin-left:10%; padding-top:10px; display: inline-block; width: 89%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;white-space: normal; line-height: 30px; text-align: left; word-wrap: break-word; display: -webkit-box; -webkit-line-clamp: 20; -webkit-box-orient: vertical;}
+
+ .skip-question {padding: 4px; margin-left: 4px; display:inline_block; border: 1px solid gray; vertical-align: middle; border-radius: 2px; background: #efefef}
