--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -28,11 +28,11 @@
             <tr>
                 <td class="info" >배포기간</td>
                 <td class="form-inline">
-                    <input type="text" style="width:auto" class="form-control datepicker"  id="startDate"> ~
-                    <input type="text" style="width:auto" class="form-control datepicker" id="endDate">
+                    <input type="text" style="width:auto" class="form-control datepicker"  id="startDate" v-model="startDate"> ~
+                    <input type="text" style="width:auto" class="form-control datepicker" id="endDate" v-model="endDate">
                 </td>
                 <td class="info" >마감인원</td>
-                <td><input type="text" class="form-control " v-model="limitperson" ></td>
+                <td><input type="text" class="form-control " v-model="limitperson" v-on:keyup="onlyNumber"  ></td>
             </tr>
         </table>
         <div>
@@ -59,18 +59,23 @@
     var vue = new Vue({
         el: '#container',
         data : {
-            title : '@Model.Title',
-            limitperson : '@Model.LimitPersons'
-            
+            title : @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Title)),
+            limitperson : @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.LimitPersons)),
+            startDate : @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.StartDate.ToString("yyyy-MM-dd"))),
+            endDate : @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.EndDate.ToString("yyyy-MM-dd")))
         },
         mounted : function(){
 
+
             $("#startDate").datepicker({
-                dateFormat: "yy-mm-dd"
+                dateFormat: "yy-mm-dd",
+                
             });
 
-            $("#endDate").datepicker({
+            $("#endDate").datepicker(
+                {
                 dateFormat: "yy-mm-dd"
+                
             });
         },
         methods : {
@@ -81,9 +86,18 @@
                 alert('저장');
             },
             register: function(){
-                alert('설문등록');
+                var s = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.SurveyID));
+                var c = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.SurveyID));
+                var r = 'aaa';
+                
+                window.open('@Url.Action("index","Edit",new {surveyid="'+ s + '",channelid="'+ c +'",returl="'+ r +'"})','_blank');
+            },
+            onlyNumber : function(e){
+                var obj = this;
+                obj.limitperson = obj.limitperson.replace(/[^0-9]/g,"");
+                if(obj.limitperson == '')
+                    obj.limitperson = 0;
             }
-
         }
         
          
@@ -92,6 +106,9 @@
 
     });
 
+    function onlyNumber(obj) {
+        
+    }
 
 </script>
 
