--- a/Views/Home/SurveyEditSave.cshtml
+++ b/Views/Home/SurveyEditSave.cshtml
@@ -14,8 +14,11 @@
 }
 
 <script>
+    var val = '@Html.Raw(ViewData["survey"])';
+    //console.log(val);
+    opener.test(val);
+    self.close();
 
-      var aaa =   '@ViewBag.value';
 </script>
 
 
