--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -113,7 +113,8 @@ var vue = new Vue({
             $.ajax({
                 type : 'POST',
                 url : '/api/UBSurvey/delete',
-                data : {id : _id},
+                contentType: 'application/json',
+                data : JSON.stringify({id : _id}),
                 success : function (res) {
                     if(res.success){
                         vue.search();
