--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -3,13 +3,14 @@ body, html{ height:102%; }
 
 .logo-container {margin-top:-10px;}
 .navbar { margin-bottom: 0px;}
-.sidenav { margin-top: 10px;}
 
 #container { display: none; }
 
-.survey {background:white !important; top:-3px}
-.leftnav {color:#222222; padding-top: 47px; text-align: left}
-.leftnav p { border-bottom: 1px solid #eee; padding-left:10px }
+.survey {background:white !important; top:-3px;}
+.leftnav {left:-12px; border-top: 1px solid #eee;border-left: 1px solid #eee; border-right: 1px solid #eee;color:#222222; margin-top: 51px; text-align: left; padding-left: 0; padding-right: 0}
+.leftnav p { border-bottom: 1px solid #eee; padding-left:42px; padding-top: 15px; height: 49px;margin: 0}
+.rightnav {border-top: 1px solid #eee;border: 1px solid #eee;color:#222222; margin-top: 51px; text-align: left; padding-left: 0; padding-right: 0}
+
 /* page tab 처리 */
 .tabs {position: relative;clear: both;margin: 52px -27px 0px -11px;background: white;}
 .tab {float: left; }
@@ -28,9 +29,10 @@ body, html{ height:102%; }
 .page-title{ font-size: 1.5em; font-weight: bold;}
 .page-desc{ border: 1px solid #c1c1c1; margin:3px 0px 14px; padding: 10px; width:100% }
 .up_down { -webkit-appearance: none;cursor: pointer;border: 0; }
+.controlContainer {padding-left: 11px}
 
 
-.tab-container {height:90vh;position: absolute;top:-1px;width:100%;right:0;padding:5px 20px 0px 18px;border: 1px solid #ccc; overflow-y:scroll;display:none; background-color:#f5f9fb } 
+.tab-container {max-height:90vh;min-height:90px;position: absolute;top:-1px;width:100%;right:12px;border: 1px solid #ccc; overflow-y:scroll;display:none; background-color:#f5f9fb } 
 .tab [type=radio]:checked ~ .labelfor {background: white;border-bottom: 1px solid white;z-index: 2;}
 .tab [type=radio]:checked ~ .labelfor ~ .tab-container {z-index: 1;display:block;} 
 
