--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
             </td>
         </tr>
     </table>
-    <div style="margin-bottom:15px"><a class="btn btn-success" href="/home/edit/">설문등록</a></div>
+    <div style="margin-bottom:15px"><a class="btn btn-success" href="/home/edit/?channelID=5a8fb4200ad8963fa4242cb2">설문등록</a></div>
     <table class="table table-bordered table-hover">
         <thead>
             <tr class="info">
