--- a/wwwroot/css/edit.css
+++ b/wwwroot/css/edit.css
@@ -1,7 +1,7 @@
 body, html{ height:102%; }
 /*  navbar */
 
-.logo-container {margin-top:20px;}
+.logo-container {padding-top:20px; padding-bottom:22px; margin: 0}
 .navbar { margin-bottom: 0px;}
 
 #container { display: none; }
